After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 670269 - misleading text flow
misleading text flow
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Power
git master
Other Linux
: Normal normal
: ---
Assigned To: Richard Hughes
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-02-17 10:00 UTC by Allan Day
Modified: 2012-02-29 12:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (3.17 KB, patch)
2012-02-17 10:03 UTC, Allan Day
none Details | Review

Description Allan Day 2012-02-17 10:00:48 UTC
'When plugged in' and 'On battery power' are too prominent. If you reading the dialog with them as the starting point you will become very confused.

'Suspend when...' and 'When power is...' should be more prominent so they lead the reader into the dialog.
Comment 1 Allan Day 2012-02-17 10:03:50 UTC
Created attachment 207841 [details] [review]
patch
Comment 2 Richard Hughes 2012-02-17 10:41:21 UTC
Looks good to me, please commit. Thanks dude.

R.
Comment 3 Javier Jardón (IRC: jjardon) 2012-02-29 12:20:55 UTC
Please Allan / Richard, could you make a break request to commit this?
Comment 4 Allan Day 2012-02-29 12:31:56 UTC
(In reply to comment #3)
> Please Allan / Richard, could you make a break request to commit this?

Sorry Javier, this bug should have been closed already. The patch was pushed a while ago:

http://git.gnome.org/browse/gnome-control-center/commit/?id=24af6576da5c76375e1a22dc7037e10eaf927791