power - fix text flow

The labels on the left should be more prominent so they lead
users into the dialog. Make them dark and the upper labels smaller.

https://bugzilla.gnome.org/show_bug.cgi?id=670269